DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
[1.0 Beta 2 released - 1.18.2005]==============================================
2005-01-18 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
2004-12-22 patrickh    NEW VERSION: 0.91.0
2004-12-22 patrickh    EnvironmentService.getenv() now falls back on
                       System.getProperty() as a last resort attempt to give
                       back a non-default value.
                       NEW VERSION: 0.21.1
2004-12-08 patrickh    Allow the use of TAO as the C++ CORBA implementation.
                       User code must now include tweek/idl/Subject.h rather
                       than tweek/CORBA/Subject.h.
                       NEW VERSION: 0.21.0
2004-12-06 patrickh    Added an overload of EnvironmentService.getenv() that
                       allows users to specify a default value to be returned
                       if the environment variable is not found.
                       NEW VERSION: 0.20.3
2004-11-13 patrickh    Added org.vrjuggler.tweek.event.EventListenerRegistry.
                       NEW VERSION: 0.20.1
2004-11-13 patrickh    Refactored the handling of TweekFrameListener so that
                       all window events are delivered to the listeners.
                       NEW VERSION: 0.20.0
2004-11-05 patrickh    Added EnvironmentService.getenv(), which is implemented
                       using a Java native method.
                       NEW VERSION: 0.19.2
2004-11-04 patrickh    The Tweek JavaBean Loader is now installed as a bundle
                       on Mac OS X (in addition to the "traditional" UNIX
                       installation launched by a shell script).
                       NEW VERSION: 0.19.1
2004-11-04 patrickh    Changed the location of Tweek data files to $HOME/.tweek
                       on UNIX-based platforms.  Along with this,